trying to fix the newsletter to fit better on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,6 +204,13 @@ footer button:hover {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width:768px) {
+  .newsletter-container{
+    width: 80%;
+    max-width: 300px;
+    margin-left: 0;
+  }
+}
 
 /* Top Header Section Home Page*/
 .header-home{
